<?xml version="1.0"?>
<package>
  <name>tilt_driver</name>
  <version>0.0.1</version>
  <description>The poli_pan_tilt package</description>

  <maintainer email="maxsvetlik@utexas.edu">Max Svetlik</maintainer>
  <license>BSD</license>

  
  <run_depend>epos_hardware</run_depend>

  <export>
  </export>
</package>
